--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cubo en Realidad Aumentada</title>
+    <title>Cubo Giratorio en AR</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script>
     <style>
@@ -15,22 +15,15 @@
       vr-mode-ui="enabled: true"
       arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;">
 
-      <!-- Entidad contenedora del cubo -->
-      <a-entity position="0 0 -8">
-        <!-- Caras individuales del cubo -->
-        <a-box 
-          depth="1" height="1" width="1"
-          material="color: #ffffff; metalness: 0.8; roughness: 0.2; side: double;"
-        >
-          <!-- Colores por cara -->
-          <a-mixin id="red" material="color: #ff4c4c"></a-mixin> <!-- Rojo claro -->
-          <a-mixin id="blue" material="color: #4caeff"></a-mixin> <!-- Azul claro -->
-          <a-mixin id="orange" material="color: #ff9933"></a-mixin> <!-- Naranja claro -->
-          <a-mixin id="white" material="color: #ffffff"></a-mixin> <!-- Blanco -->
-          <a-mixin id="lightgreen" material="color: #90ee90"></a-mixin> <!-- Verde claro -->
-          <a-mixin id="yellow" material="color: #ffff99"></a-mixin> <!-- Amarillo claro -->
-        </a-box>
-      </a-entity>
+      <!-- Cubo girando a 3 metros digitales -->
+      <a-box 
+        position="0 0 -3"
+        depth="1" height="1" width="1"
+        color="#4caeff"
+        metalness="0.7"
+        roughness="0.2"
+        animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"
+      ></a-box>
 
       <!-- Cámara -->
       <a-entity camera></a-entity>
