--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cubo Giratorio en AR</title>
+    <title>Cubo Giratorio con Marcador en AR</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
     <style>
       body { margin: 0; overflow: hidden; }
       a-scene { width: 100%; height: 100%; }
@@ -12,22 +12,23 @@
   <body>
     <a-scene
       embedded
-      vr-mode-ui="enabled: true"
       arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;">
+      
+      <!-- Marcador AR (puedes usar tu propio marcador .patt) -->
+      <a-marker preset="hiro">
+        <!-- Cubo que aparecerá cuando el marcador sea detectado -->
+        <a-box 
+          position="0 0.5 0"
+          depth="1" height="1" width="1"
+          color="#4caeff"
+          metalness="0.7"
+          roughness="0.2"
+          animation="property: rotation; to: 360 360 360; loop: true; dur: 5000">
+        </a-box>
+      </a-marker>
 
-      <!-- Cubo girando en todas las direcciones -->
-      <a-box 
-        position="0 0 -3"
-        depth="1" height="1" width="1"
-        color="#4caeff"
-        metalness="0.7"
-        roughness="0.2"
-        animation="property: rotation; to: 360 360 360; loop: true; dur: 5000"
-      ></a-box>
-
-      <!-- Cámara que activa la realidad aumentada -->
+      <!-- Cámara -->
       <a-entity camera></a-entity>
-
     </a-scene>
   </body>
 </html>
