--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cubo Giratorio con Marcador en AR</title>
+    <title>Cubo Giratorio en AR</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
     <style>
@@ -10,22 +10,26 @@
     </style>
   </head>
   <body>
-    <a-scene
-      embedded
-      arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;">
-      
-      <!-- Marcador AR (puedes usar tu propio marcador .patt) -->
-      <a-marker type="pattern" url="ar_marker.patt">
-        <!-- Cubo que aparecerá cuando el marcador sea detectado -->
-        <a-box 
-          position="0 0.5 0"
-          depth="1" height="1" width="1"
-          color="#4caeff"
-          metalness="0.7"
-          roughness="0.2"
-          animation="property: rotation; to: 360 360 360; loop: true; dur: 5000">
-        </a-box>
-      </a-marker>
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;">
+
+      <!-- Cubo giratorio con colores distintos en cada cara -->
+      <a-box position="0 0 -3" 
+             rotation="0 0 0"
+             width="1" height="1" depth="1">
+        <!-- Cara 1: Rojo -->
+        <a-plane position="0 0.5 0" rotation="0 0 0" width="1" height="1" color="#FF0000"></a-plane>
+        <!-- Cara 2: Verde -->
+        <a-plane position="0 -0.5 0" rotation="180 0 0" width="1" height="1" color="#00FF00"></a-plane>
+        <!-- Cara 3: Azul -->
+        <a-plane position="0 0 0.5" rotation="90 0 0" width="1" height="1" color="#0000FF"></a-plane>
+        <!-- Cara 4: Amarillo -->
+        <a-plane position="0 0 -0.5" rotation="-90 0 0" width="1" height="1" color="#FFFF00"></a-plane>
+        <!-- Cara 5: Naranja -->
+        <a-plane position="0.5 0 0" rotation="0 90 0" width="1" height="1" color="#FFA500"></a-plane>
+        <!-- Cara 6: Blanco -->
+        <a-plane position="-0.5 0 0" rotation="0 -90 0" width="1" height="1" color="#FFFFFF"></a-plane>
+        <a-animation attribute="rotation" to="360 360 360" dur="10000" repeat="indefinite"></a-animation>
+      </a-box>
 
       <!-- Cámara -->
       <a-entity camera></a-entity>
