--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       vr-mode-ui="enabled: true"
       arjs="sourceType: webcam; debugUIEnabled: false; trackingMethod: best;">
 
-      <!-- Cubo girando a 3 metros digitales -->
+      <!-- Cubo girando en todas direcciones a 6 metros digitales -->
       <a-box 
-        position="0 0 -3"
+        position="0 0 -6"
         depth="1" height="1" width="1"
-        color="#4caeff"
+        color="red"
         metalness="0.7"
         roughness="0.2"
-        animation="property: rotation; to: 0 360 0; loop: true; dur: 10000"
-      ></a-box>
+        animation="property: rotation; to: 360 360 360; loop: true; dur: 10000">
+      </a-box>
 
       <!-- Cámara -->
       <a-entity camera></a-entity>
